Infrastructure/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: backend_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - name: "text"
                          match:
                            prefix: "/text"
                          route:
                            timeout: 120s
                            auto_host_rewrite: true
                            prefix_rewrite: "/."
                            cluster: recall-textlist.api
                            
                        - name: "maskedText"
                          match:
                            prefix: "/maskedText"
                          route:
                            timeout: 120s
                            auto_host_rewrite: true
                            prefix_rewrite: "/."
                            cluster: recall-maskedtextlist.api 
                http_filters:
                  - name: envoy.router
                access_log:
                  - name: envoy.file_access_log
                    filter:
                      not_health_check_filter: { }
                    config:
                      json_format:
                        time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_method: "%REQ(:METHOD)%"
                        request_host: "%REQ(HOST)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        response_flags: "%RESPONSE_FLAGS%"
                        route_name: "%ROUTE_NAME%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                      path: "/tmp/access.log"
  clusters:
    - name: recall-textlist.api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: recall-textlist.api
            port_value: 80
            
    - name: recall-maskedtextlist.api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: recall-maskedtextlist.api
            port_value: 80
